tests/build/cases/widget_new/missing_semi_in_when2.stderr
error: expected `,`
  --> $DIR/missing_semi_in_when2.rs:11:13
   |
11 |             cursor = CursorIcon::Hand;
   |             ^^^^^^

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/missing_semi_in_when2.rs:11:13
   |
11 |             cursor = CursorIcon::Hand;
   |             ^^^^^^- supplied 0 arguments
   |             |
   |             expected 1 argument
   |
note: associated function defined here
  --> $DIR/layout.rs:36:1
   |
36 | #[property(outer, default(0))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
